--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
-django==2.2
+django==2.2.10
 gunicorn
 django-crispy-forms
 djongo
-pymongo
 dnspython
-pylint-django
-cloudinary
-django_countries
-sqlparse==0.2.4
 django-filter
 pillow
 python-decouple
 django-cors-headers
 django-csp
 django-progressive-web-app
-python-social-auth
-social-auth-app-django
-
+whitenoise
+django-heroku
